# yoyopod

./: .bazelignore  .dockerignore  .gitignore  AGENTS.md  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  pyproject.toml  yoyopod.py
.claude/: CLAUDE.md  launch.json
cli/: README.md
config/: yoyopod_config.yaml
demos/: demo_gps_server.py  demo_interactive.py  demo_mopidy.py  demo_playlists.py  demo_runtime_state.py  demo_voip.py
deploy/: pi-deploy.yaml
device/: Cargo.toml
device/network/: Cargo.toml
device/network/src/: config.rs  lib.rs  portal.html  protocol.rs  provisioning.rs  wifi.rs  worker.rs
docs/: ASK_SCREEN_DESIGN_SPEC.md  AUDIO_STACK.md  CANONICAL_STRUCTURE.md  CLOUD_PROVISIONING_AND_BACKEND.md  CLOUD_VOICE_WORKER.md  CONTRIBUTOR_WORKFLOW.md  CROSS_SCREEN_OVERLAYS.md  CUBIE_A7Z_BRINGUP.md  CUBIE_A7Z_PIMORONI_SETUP.md  DEPLOYED_PI_DEPENDENCIES.md  DEVELOPMENT_GUIDE.md  DEV_PROD_LANES.md  DISPLAY_HAL_ARCHITECTURE.md  GLOBAL_AUDIO_DEVICE_FACADE_CONTRACT.md  INPUT_HAL_ARCHITECTURE.md  INTEGRATION_PLAN.md  LOCAL_FIRST_MUSIC_PLAN.md  LVGL_MIGRATION_PLAN.md  MPV_DEPENDENCIES.md  PHASE2_SUMMARY.md  PI_DEV_WORKFLOW.md  PI_PROFILING_WORKFLOW.md  POWER_MODULE.md  README.md  ROADMAP.md  RPI_SMOKE_VALIDATION.md  RUNTIME_EVENT_FLOW.md  RUST_UI_HOST.md  RUST_UI_POC.md  SETUP_CONTRACT.md  SLOT_DEPLOY.md  SYSTEM_ARCHITECTURE.md  UI_RESTRUCTURE_PROPOSAL.md  VOICE_COMMAND_CHECKLIST.md  VOICE_COMMAND_PLAN.md  WHISPLAY_SIMULATION_PARITY_CONTRACT.md
rules/: architecture.md  deploy.md  design-fidelity.md  logging.md  lvgl.md  project.md  voip.md
scripts/: build_release.py  install_pimoroni_displayhatmini.sh  pi_remote.py  pi_smoke.py  whisplay_gallery.py  whisplay_tune.py
skills/: deploy.md  logs.md  pi-status.md  restart.md  screenshot.md  sync.md
tests/: test_call_screen.py  (+85 more)
yoyopod_rs/network-host/: BUILD.bazel  Cargo.toml
yoyopod_rs/network-host/src/: config.rs  lib.rs  main.rs  modem.rs  protocol.rs  runtime.rs  snapshot.rs  worker.rs
yoyopod_rs/network-host/tests/: config.rs  gps.rs  lifecycle.rs  protocol.rs  runtime_snapshot.rs  worker.rs
yoyopod_rs/network-host/tests/support/: mod.rs
(+1155 files in other folders)
